# MATRICS-A

./: LICENSE  README.md
PROG/BinaryThreshold/: BinaryThresh.cxx  BinaryThreshDAPI.cxx  BinaryThreshDAPI2.cxx  BinaryThreshProb_CD.cxx  BinaryThreshProb_CD31.cxx  BinaryThresh_AF.cxx  BinaryThresh_CD31.cxx  BinaryThresh_GS_CD31.cxx  BinaryThresh_TCells.cxx  CMakeLists.txt  CMakeLists.txt~
PROG/ClassSeg/: CMakeLists.txt  ClassSeg2D_CD.cxx  ClassSeg2D_CD_Tif.cxx
PROG/ConvertImage/: CMakeLists.txt  ConvertImage.cxx
PROG/CreateVolume/: CMakeLists.txt  CreateVolume.cxx
PROG/InvertImage/: CMakeLists.txt  CMakeLists.txt~  DilateMask.cxx  DilateROI.cxx  DilateROI.cxx~  DilateROI2.cxx  DilateROI3.cxx  DilateROIMask.cxx  InvertImage.cxx  InvertImage_CD.cxx  MaskROI.cxx  MaskROI.cxx~
PROG/LabelStatisticsImageFilter/: CMakeLists.txt  LabelShapeFilter.cxx  LabelShapeFilter2.cxx  LabelShapeFilter2D.cxx  LabelShapeFilter3.cxx  LabelShapeFilter4.cxx  LabelStatisticsImageFilter2.cxx
PROG/MaskROI/: .MR_US_ROI.cxx.swp  CMakeLists.txt  CMakeLists.txt~  MaskROI2.cxx  Mask_CD3.cxx  Mask_Epidermis.cxx  Mask_WSI.cxx
PROG/RemoveComponents/: CMakeLists.txt  ConnectedCompAE1.cxx  ConnectedCompAE3.cxx  ConnectedCompAE4.cxx  ConnectedCompAE4_R1.cxx  ConnectedCompAE_Prob.cxx  DilateROI_Int_AE_CD.cxx  Filter_CD31.cxx  Filter_Cells.cxx  Filter_DAPI.cxx  Filter_DAPI2.cxx  Filter_DAPI3.cxx  Filter_DAPI_Inv.cxx  Filter_P53Cells.cxx  Int_AE_CD.cxx  ProcessCD312D.cxx  ProcessCD682D.cxx  RemoveComp.cxx  Seg_Cells2.cxx  Seg_DBB2.cxx  Seg_TCells.cxx  Seg_TCells2.cxx  Seg_TCells3.cxx  Seg_TCells4.cxx  Seg_THlp.cxx  Seg_TReg.cxx  TCells_Seg.cxx
PROG/Resample/: resample_AF_2D.py  resample_BM.py  resample_Mask_2D.py  resample_mask2.py
PROG/TissueMask/: OtsuThresh.py
PROG/TissueMask/DilateROI/: CMakeLists.txt  DilateMask.cxx  DilateROI_Int_AE_CD.cxx
PROG/TissueMask/ErodeROI/: CMakeLists.txt  ErodeMask.cxx  ErodeMask2.cxx
PROG/TissueMask/HoleFilling/: .HoleFilling.cxx.swp  CMakeLists.txt  ConnectedComp3D.cxx
PROG/hubmap_segmentation/: CellDIVE_IO.py  CellDIVE_Seg.py  CreateDistanceLabels.py  CreateSyntheticCytoMask.py  CreateTrainingPatches.py  DAPI_Seg.py  DAPI_Seg2.py  ExtractROIs.py  ImageAugmentation.py  MakeMultiChannelLG.py  README.md  learning_helpers.py  testDAPISeg.py  testDAPISeg2.py  testDAPISeg_MALDI2.py  testTissueSeg.py
PROG/hubmap_segmentation/models/: LowResModel.json  LowResModel.sav  model2.h5.json  model2.json  model_full_trainSet0_fold0-symbol.json
SCRIPTS/: 3DCoordinates.sh  Registration.sh  Segmentation.sh
