cmake_minimum_required(VERSION 3.3)
PROJECT(BinaryThreshDAPI2)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(BinaryThresh_AF BinaryThresh_AF.cxx)
TARGET_LINK_LIBRARIES(BinaryThresh_AF ${ITK_LIBRARIES})

