cmake_minimum_required(VERSION 2.8)
PROJECT(ClassSeg2D_CD)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(ClassSeg2D_CD ClassSeg2D_CD.cxx)
TARGET_LINK_LIBRARIES(ClassSeg2D_CD ${ITK_LIBRARIES})

