cmake_minimum_required(VERSION 2.8)
PROJECT(InvertImage)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(InvertImage_CD InvertImage_CD.cxx)
TARGET_LINK_LIBRARIES(InvertImage_CD ${ITK_LIBRARIES})

