cmake_minimum_required(VERSION 2.8)
PROJECT(MaskROI)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(Mask_Epidermis Mask_Epidermis.cxx)
TARGET_LINK_LIBRARIES(Mask_Epidermis ${ITK_LIBRARIES})

