cmake_minimum_required(VERSION 2.8)
PROJECT(P53_KI67_AE_Int)
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)
ADD_EXECUTABLE(P53_KI67_AE_Int DilateROI_Int_AE_CD.cxx)
TARGET_LINK_LIBRARIES(P53_KI67_AE_Int ${ITK_LIBRARIES})

